force-app/main/default/objects/nPortal__Route_Agreement__c/nPortal__Route_Agreement__c.object-meta.xml
<CustomObject>
    <description>--DEPRECATED-- Records a user&apos;s agreement to a Terms &amp; Conditions document on a particular route in an Online Application.</description>
    <label>-D Route Agreement</label>
    <nameField>
        <displayFormat>RT{0000}</displayFormat>
        <label>Route Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>-D Route Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>