force-app/main/default/objects/nPortal__Route_Agreement__c/fields/nPortal__Agreed__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Agreed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stores whether or not the user has accepted a particular document in Customer Portal Online applications.</description>
    <inlineHelpText>Select this field if the terms outlined in the document have been accepted.</inlineHelpText>
    <label>Agreed</label>
    <type>Checkbox</type>
</CustomField>