force-app/main/default/objects/nPortal__Route_Agreement__c/fields/nPortal__Application__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Maps the document to the associated Application.</description>
    <label>Application</label>
    <referenceTo>LLC_BI__Application__c</referenceTo>
    <relationshipLabel>Route Agreements</relationshipLabel>
    <relationshipName>Route_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>