force-app/main/default/objects/nPortal__Route_Agreement__c/fields/nPortal__Route_Terms__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Route_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Maps to a particular record which defines which document has been agreed to and on which Route.</description>
    <label>Route Terms</label>
    <referenceTo>nPortal__Route_Terms__c</referenceTo>
    <relationshipLabel>Route Agreements</relationshipLabel>
    <relationshipName>Route_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>