force-app/main/default/objects/nPortal__Route_Agreement__c/fields/nPortal__User__c.field-meta.xml
<CustomField>
    <fullName>nPortal__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Maps the document to the user who has agreed to the terms.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Route Agreements</relationshipLabel>
    <relationshipName>Route_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>