force-app/main/default/objects/nPortal__Route_Agreement__c/listViews/nPortal__All.listView-meta.xml
<ListView>
    <fullName>nPortal__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>